exports[`server side render should pass failure when data load fails 1`] = `
Object {
  "data": undefined,
  "errorMessage": "Boom!",
  "isCompleted": false,
  "isLoading": false,
  "loadFailed": true,
  "renderCount": 3,
}
`;

exports[`server side render should pass failure when data load fails 2`] = `
Object {
  "dataLoader": Object {
    "data": Object {
      "testDataType": Object {
        "testKey": Object {
          "completed": false,
          "error": "Boom!",
          "failed": true,
          "loading": false,
          "serverSideRender": true,
        },
      },
    },
    "loadingCount": 0,
  },
}
`;

exports[`server side render should pass loaded data once promise resolves 1`] = `
Object {
  "data": Object {
    "result": "Success!",
  },
  "errorMessage": undefined,
  "isCompleted": true,
  "isLoading": false,
  "loadFailed": false,
  "renderCount": 3,
}
`;

exports[`server side render should pass loaded data once promise resolves 2`] = `
Object {
  "dataLoader": Object {
    "data": Object {
      "testDataType": Object {
        "testKey": Object {
          "completed": true,
          "data": Object {
            "result": "Success!",
          },
          "failed": false,
          "loading": false,
          "serverSideRender": true,
        },
      },
    },
    "loadingCount": 0,
  },
}
`;

exports[`server side render should start loading data if not loaded 1`] = `
Object {
  "data": undefined,
  "errorMessage": undefined,
  "isCompleted": false,
  "isLoading": true,
  "loadFailed": false,
  "renderCount": 2,
}
`;

exports[`server side render should start loading data if not loaded 2`] = `
Object {
  "dataLoader": Object {
    "data": Object {
      "testDataType": Object {
        "testKey": Object {
          "completed": false,
          "failed": false,
          "loading": true,
          "serverSideRender": true,
        },
      },
    },
    "loadingCount": 1,
  },
}
`;
